Preserve local permission edits and symlink target modes